# fdtd-vocaltract-model

./: CMakeLists.txt  LICENSE
cmake/modules/: FindPNG.cmake  FindSndFile.cmake  PackageWithFallback.cmake
src/: .clang-format  CMakeLists.txt  constants.hh  eigen.hh  main.cc  params.hh  talking_tube.cc  types.hh
src/audio/: butterworth.cc  butterworth.hh  generate_audio.cc  generate_audio.hh  save_audio_file.cc  save_audio_file.hh  sos_filter.cc  sos_filter.hh
src/image/: image.hh  make_cell_image.cc  make_cell_image.hh  make_wave_image.cc  make_wave_image.hh  save_to_png.cc  save_to_png.hh
src/model/: LF.cpp  LF.h
src/routines/: area_function.cc  area_function.hh  boundary_interpolation.cc  boundary_interpolation.hh  centric_circular_contour_generation.cc  centric_circular_contour_generation.hh  centric_elliptical_contour_generation.cc  centric_elliptical_contour_generation.hh  circular_tube_generation.cc  circular_tube_generation.hh  eccentric_circular_contour_generation.cc  eccentric_circular_contour_generation.hh  eccentric_elliptical_contour_generation.cc  eccentric_elliptical_contour_generation.hh  elliptical_tube_generation.cc  elliptical_tube_generation.hh  find_cell_types.cc  find_cell_types.hh  impulse_signal.cc  impulse_signal.hh  tube_segment_connector.cc  tube_segment_connector.hh
